--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <hr>
 <a
-href="https://validator.w3.org/check/referer"> <img
+href="http://validator.w3.org/check/referer"> <img
 src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
 alt="html validator"/></a>
 </body>
