--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +8,7 @@
 <body style="background: aliceblue">
 <img src="programming-bg.jpg" style="width: 100%; height: 200px;margin-left: -0.4em;">
 <img src="mine.jpg" style="width: 250px; border-radius: 0%; margin-left: 2em;margin-top: -11em;
-                           border-radius: 50%"></br>
+                           border-radius: 50%"><br/>
 
 <h2>Wondyfraw Hailu Ayele</h2>
 <ul>
