modify alt attributies in imd tage

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Title</title>
 </head>
 <body style="background: aliceblue">
-<img src="programming-bg.jpg" style="width: 100%; height: 200px;margin-left: -0.4em;" alt="Bg image">
-<img src="mine.jpg" style="width: 250px; border-radius: 0%; margin-left: 2em;margin-top: -11em; alt="My Picture"
+<img src="programming-bg.jpg" style="width: 100%; height: 200px;margin-left: -0.4em;" alt="Bg_image">
+<img src="mine.jpg" style="width: 250px; border-radius: 0%; margin-left: 2em;margin-top: -11em; alt="My_Picture"
                            border-radius: 50%"><br/>
 
 <h2>Wondyfraw Hailu Ayele</h2>
@@ -26,7 +26,7 @@
 <hr>
 <a
 href="https://validator.w3.org/check/referer"> <img
-src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="HTML Validator"
+src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="HTML_Validator"
 alt="html validator"/></a>
 </body>
 </html>
