--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body style="background: aliceblue">
 <img src="programming-bg.jpg" style="width: 100%; height: 200px;margin-left: -0.4em;" alt="Bgimage">
-<img src="mine.jpg" style="width: 250px; border-radius: 0%; margin-left: 2em;margin-top: -11em; alt="MyPicture"
-                           border-radius: 50%"><br/>
+<img src="mine.jpg" style="width: 250px; border-radius: 0%; margin-left: 2em;margin-top: -11em;
+                           border-radius: 50%"alt="MyPicture"><br/>
 
 <h2>Wondyfraw Hailu Ayele</h2>
 <ul>
@@ -26,7 +26,7 @@
 <hr>
 <a
 href="https://validator.w3.org/check/referer"> <img
-src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="HTMLValidator"
-alt="html validator"/></a>
+src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+alt="htmlvalidator"/></a>
 </body>
 </html>
