--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body style="background: aliceblue">
 <img src="programming-bg.jpg" style="width: 100%; height: 200px;margin-left: -0.4em;" alt="Bgimage">
-<img src="mine.jpg" style="width: 250px; border-radius: 0%; margin-left: 2em;margin-top: -11em;
-                           border-radius: 50%"alt="MyPicture"><br/>
+<img src="mine.jpg" alt="MyPicture" style="width: 250px; border-radius: 0%; margin-left: 2em;margin-top: -11em;
+                           border-radius: 50%"><br/>
 
 <h2>Wondyfraw Hailu Ayele</h2>
 <ul>
